Separate API and impl + add scoreboard parsing.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ minecraft.version=1.8.9
 loom.platform=forge
 java.version=8
 
-mod.name=HPSB-API
+mod.name=SkyBlock Programming Interface
 mod.version=1.0.0
-mod.id=hpsb-api
+mod.id=sbpi
 mod.description=An API/library mod for Hypixel SkyBlock mods.
